--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 body {
-  font-family: var(--font-roboto);
+  font-family: var(--font-roboto), sans-serif;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
